syntax = "proto3";

package datacount;

option go_package = "github.com/grpc-demo/datacount/protoc";

message RowRequest {
  repeated string line = 1;
}

message CountResponse {
  int64 result = 1;
}

service countService {
  // 客户端流式请求
  rpc ClientData (stream RowRequest) returns (CountResponse) {}
}
